# NL_symex

./: .gitignore  README.md  assume.h  bonus_calculator.h  branch_checker.py  branch_ckecker.py  copy_origin.py  cov_line_coverage.py  diff_test  differential_test  find_relaxed_pre_solution.py  get_assume_code.py  get_categories.py  get_klee_assumes.py  get_minimal.py  ktest.py  ktest_transform.py  ln_ef_l2.c  ln_ef_l2_annotated_with_varDecls.c  ln_ef_l2_annotated_with_varTracking.c  ln_ef_l2_klee.c  main.py  map_line_numbers.py  model.py  orig_minimal_prefix.c  orig_minimal_prefix_relaxed_10.c  orig_minimal_prefix_relaxed_100.c  orig_minimal_prefix_relaxed_25.c  orig_minimal_prefix_relaxed_50.c  partA.py  pipeline.md  pipeline.py  prepare_klee.py  preprocessing.md  preprocessing.py  reach_Nl_start.py  remap_testcase.py  replace.py  replace_mad.py  requirements.txt  (+11 more)
klee_relax_10_ktests/: test000001.ktest
llvm_pass/: BranchTracePass.cpp  CMakeLists.txt  branch_logger.bc  pass.py  pass.sh  trace.h
logic_bombs/: .bash_history  .bashrc  .viminfo  get_klee_coverage.py  make_klee_executable.sh  orig_minimal_prefix.c  original_prefix.bc  reachable_line_klee.bc  reachable_line_klee.c  reachable_line_simple  reachable_line_simple.c  trnsfer_klee_versions.py  your_program  your_program1
temp_test/: differential_testing_code.c  feedback.txt  nl_block.c  prefix.c  run_tests.c  test_vectors.json  trasnlated_code.c  universal_transformed_code.c  updated_transformed_code.c
test_scripts/: remap_testcase.py  test.c  test_annotated_annotated.c
{log_folder}/: minimal.c
(+2275 files in other folders)
